[gd_scene load_steps=12 format=2]

[ext_resource path="res://Images/LaserTexture.png" type="Texture" id=1]
[ext_resource path="res://Images/Bullet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Player/Bullet/Bullet.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Player/Bullet/BulletTrailLine2D.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Autoloads/Materials/PlayerBullet.tres" type="Material" id=5]

[sub_resource type="CanvasItemMaterial" id=6]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0.86036 ), 0.0, -0.0882878, 0, 0, Vector2( 0.25, 0.972973 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.405405 ), -0.900194, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 0.917647, 1, 0.996078, 1, 0.33, 1, 0.98, 0 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50.05, 20.1 )

[sub_resource type="CanvasItemMaterial" id=5]
blend_mode = 1

[node name="Area2D" type="Area2D"]
modulate = Color( 1.1, 1.1, 1.15, 1 )
material = SubResource( 6 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 20
script = ExtResource( 3 )

[node name="Bullet" type="Sprite" parent="."]
modulate = Color( 1.1, 1.1, 1.1, 1 )
material = SubResource( 1 )
position = Vector2( 57.1875, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )

[node name="BulletTrailLine2D" type="Line2D" parent="."]
modulate = Color( 1.2, 1.2, 1.3, 1 )
show_behind_parent = true
position = Vector2( 12.5, 0 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 40.0
width_curve = SubResource( 2 )
default_color = Color( 0.65098, 1, 0.988235, 1 )
gradient = SubResource( 3 )
texture = ExtResource( 1 )
texture_mode = 2
antialiased = true
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="BulletTrailLine2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="Particles2D" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1.1, 1 )
material = SubResource( 5 )
amount = 20
lifetime = 0.2
local_coords = false
process_material = ExtResource( 5 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="tween_all_completed" from="BulletTrailLine2D/Tween" to="." method="_on_LineTrail_Tween_tween_all_completed"]
